--- a/css/12bool.css
+++ b/css/12bool.css
@@ -15,98 +15,103 @@
     flex-wrap: wrap;
 }
 
-.col1{
-    flex-basis: calc(100% / 12) * 1;
+.row2{
+    display: flex;
+    flex-wrap: wrap;
+} 
+
+.col-1{
+    flex-basis: calc(100% / 12 * 1);
 }
 
-.col2{
-    flex-basis: calc(100% / 12) * 2;
+.col-2{
+    flex-basis: calc(100% / 12 * 2);
 }
 
-.col3{
-    flex-basis: calc(100% / 12) * ;
+.col-3{
+    flex-basis: calc(100% / 12 * 3) ;
 }
 
-.col4{
-    flex-basis: calc(100% / 12) * 4;
+.col-4{
+    flex-basis: calc(100% / 12 * 4);
 }
 
-.col5{
-    flex-basis: calc(100% / 12) * 5;
+.col-5{
+    flex-basis: calc(100% / 12 * 5);
 }
 
-.col6{
-    flex-basis: calc(100% / 12) * 6;
+.col-6{
+    flex-basis: calc(100% / 12 * 6);
 }
 
-.col7{
-    flex-basis: calc(100% / 12) * 7;
+.col-7{
+    flex-basis: calc(100% / 12 * 7);
 }
 
-.col8{
-    flex-basis: calc(100% / 12) * 8;
+.col-8{
+    flex-basis: calc(100% / 12 * 8);
 }
 
-.col9{
-    flex-basis: calc(100% / 12) * 9;
+.col-9{
+    flex-basis: calc(100% / 12 * 9);
 }
 
-.col10{
-    flex-basis: calc(100% / 12) * 10;
+.col-10{
+    flex-basis: calc(100% / 12 * 10);
 }
 
-.col11{
-    flex-basis: calc(100% / 12) * 11;
+.col-11{
+    flex-basis: calc(100% / 12 * 11);
 }
 
-.col12{
-    flex-basis: calc(100% / 12) * 12;
+.col-12{
+    flex-basis: calc(100% / 12 * 12);
 }
 
 .col-offset-1{
-    margin-left: calc(100% / 12) * 1;
+    margin-left: calc(100% / 12 * 1);
 }
 
 .col-offset-2{
-    margin-left: calc(100% / 12) * 2;
+    margin-left: calc(100% / 12 * 2);
 }
 
 .col-offset-3{
-    margin-left: calc(100% / 12) * 3;
+    margin-left: calc(100% / 12 * 3);
 }
 
 .col-offset-4{
-    margin-left: calc(100% / 12) * 4;
+    margin-left: calc(100% / 12 * 4);
 }
 
 .col-offset-5{
-    margin-left: calc(100% / 12) * 5;
+    margin-left: calc(100% / 12 * 5);
 }
 
 .col-offset-6{
-    margin-left: calc(100% / 12) * 6;
+    margin-left: calc(100% / 12 * 6);
 }
 
 .col-offset-7{
-    margin-left: calc(100% / 12) * 7;
+    margin-left: calc(100% / 12 * 7);
 }
 
 .col-offset-8{
-    margin-left: calc(100% / 12) * 8;
+    margin-left: calc(100% / 12 * 8);
 }
 
 .col-offset-9{
-    margin-left: calc(100% / 12) * 9;
+    margin-left: calc(100% / 12 * 9);
 }
 
 .col-offset-10{
-    margin-left: calc(100% / 12) * 10;
+    margin-left: calc(100% / 12 * 10);
 }
 
 .col-offset-11{
-    margin-left: calc(100% / 12) * 11;
+    margin-left: calc(100% / 12 * 11);
 }
 
 .col-offset-12{
-    margin-left: calc(100% / 12) * 12;
+    margin-left: calc(100% / 12 * 12);
 }
