--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 div.row>*{
     background-color: aqua;
-    padding: 2rem;
     border: 2px solid white;
+    text-align: center;
+    padding: 0.8rem;
+}
+
+
+div.row2>*{
+    background-color: lime;
+    padding: 0.8rem;
+    border: 2px solid aqua;
 }
 
